# Catalog

./: auth_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_views_count.py  0003_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: data.json
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_update_at.py  0002_product_manufactured_at.py  0003_contact.py  0004_blog_alter_contact_address_alter_product_preview.py  0005_alter_blog_slug.py  0006_delete_blog.py  0007_productversion.py  0008_alter_productversion_product.py  0009_alter_productversion_product.py  0010_product_owner.py  0011_product_is_published.py  0012_alter_product_options.py
catalog/templates/: add.html  base.html  contacts.html  home.html  product.html
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html  category_list.html  contact_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: custom_filters.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_country.py  0003_alter_user_country.py  0004_user_token.py
utils/: utils.py
(+9 files in other folders)
