[tool.poetry]
name = "catalog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
ipython = "^8.25.0"
pillow = "^10.3.0"
pytils = "^0.4.1"
django-crispy-forms = "^2.2"
crispy-bootstrap5 = "^2024.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
django = "4.2.14"
django-countries = {extras = ["pyuca"], version = "^7.6.1"}
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
